--- a/style.css
+++ b/style.css
@@ -32,4 +32,12 @@ a {
     color: #9c131a;
     font-size: 18px;
     font-family: Helvetica;
+
 }
+
+.form-group {
+    margin-top: 10px;
+}
+
+.form-group
+m
